--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
         </div>
     </section>
 
+    <footer>
+
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@25.13.2/build/js/intlTelInput.min.js"></script>
     <script src="/js/countrycode.js"></script>
     <script src="/js/bookingsubmit.js"></script>
